[gd_scene load_steps=3 format=3 uid="uid://be1lhds3klu1h"]

[ext_resource type="Script" path="res://PapersPleaseClone/Scripts/HUD.gd" id="1_j60ag"]
[ext_resource type="Texture2D" uid="uid://d3fjlx8lx36ly" path="res://PapersPleaseClone/Sprites/Test/botao_menu.png" id="2_5ggol"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_j60ag")

[node name="LabelPontos" type="Label" parent="."]
offset_left = 472.0
offset_top = 16.0
offset_right = 512.0
offset_bottom = 47.0
theme_override_font_sizes/font_size = 20
text = "0"
horizontal_alignment = 1

[node name="BotaoPause" type="TextureButton" parent="."]
offset_right = 32.0
offset_bottom = 32.0
texture_normal = ExtResource("2_5ggol")
texture_pressed = ExtResource("2_5ggol")
texture_hover = ExtResource("2_5ggol")

[node name="Panel" type="Panel" parent="."]
offset_right = 512.0
offset_bottom = 288.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.5
offset_top = -48.0
offset_right = 74.5
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelPause" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Jogo Pausado"
horizontal_alignment = 1

[node name="Continuar" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Continuar"

[node name="Menu" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Retornar ao Menu"

[connection signal="pressed" from="BotaoPause" to="." method="_on_botao_pause_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
